--- a/src/front-end/package.json
+++ b/src/front-end/package.json
@@ -17,11 +17,13 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.3.5",
+    "axios": "^1.4.0",
     "babel-loader": "^9.1.3",
     "cpx": "^1.5.0",
     "css-loader": "^6.8.1",
     "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
