made neccesary changes to build both front-end, front-end server and backend and created shell scripts that run and work perfectly fine

--- a/src/front-end/server/package.json
+++ b/src/front-end/server/package.json
@@ -6,7 +6,7 @@
     "scripts": {
       "start": "node server.js",
       "test": "echo \"Error: no test specified\" && exit 1",
-      "build": "rimraf ./dist && webpack  && cpx './data*' './dist' && cpx './run.sh' './dist'"
+      "build": "webpack"
     },
     "keywords": [],
     "author": "",
